exports[`OpenSpots component applies correct classes to empty and expired spots 1`] = `
<div
  className="open-spots-display">
  <div
    className="weekday">
    <p>
      Mon, 01/02
    </p>
    <button
      className="expired-spot"
      disabled={true}
      name="Mon, 01/02, 09:00 am: expired"
      onClick={[Function]}>
      09:00 am: expired
    </button>
    <button
      className="expired-spot"
      disabled={true}
      name="Mon, 01/02, 10:00 am: expired"
      onClick={[Function]}>
      10:00 am: expired
    </button>
  </div>
  <div
    className="weekday">
    <p>
      Tue, 01/03
    </p>
    <button
      className="closed-spot"
      disabled={true}
      name="Tue, 01/03, 10:00 am: none available"
      onClick={[Function]}>
      10:00 am: none available
    </button>
  </div>
</div>
`;

exports[`OpenSpots component correctly partitions and renders open spots 1`] = `
<div
  className="open-spots-display">
  <div
    className="weekday">
    <p>
      Tue, 01/03
    </p>
    <button
      className="open-spot"
      disabled={false}
      name="Tue, 01/03, 10:00 am: 2 available"
      onClick={[Function]}>
      10:00 am: 2 available
    </button>
  </div>
  <div
    className="weekday">
    <p>
      Wed, 01/04
    </p>
    <button
      className="open-spot"
      disabled={false}
      name="Wed, 01/04, 09:00 am: 2 available"
      onClick={[Function]}>
      09:00 am: 2 available
    </button>
  </div>
  <div
    className="weekday">
    <p>
      Thu, 01/05
    </p>
    <button
      className="open-spot"
      disabled={false}
      name="Thu, 01/05, 10:00 am: 1 available"
      onClick={[Function]}>
      10:00 am: 1 available
    </button>
    <button
      className="open-spot"
      disabled={false}
      name="Thu, 01/05, 11:00 am: 5 available"
      onClick={[Function]}>
      11:00 am: 5 available
    </button>
  </div>
</div>
`;

exports[`OpenSpots component renders a spinner if both location and course are selected, but openSpots is a Left of loading message 1`] = `
<div
  className="open-spots-message">
  <div
    className="loading" />
</div>
`;

exports[`OpenSpots component renders an appropriate error message if course is not selected but location is 1`] = `
<div
  className="open-spots-message">
  <h1>
    Select a Course
  </h1>
</div>
`;

exports[`OpenSpots component renders an appropriate error message if location is missing 1`] = `
<div
  className="open-spots-message">
  <h1>
    Select a Location
  </h1>
</div>
`;

exports[`OpenSpots component renders an appropriate error message if location is missing 2`] = `
<div
  className="open-spots-message">
  <h1>
    Select a Location
  </h1>
</div>
`;

exports[`OpenSpots component renders an error message if both location and course are selected, but openSpots is a Left of any other message 1`] = `
<div
  className="open-spots-message">
  <h1>
    No ducks here.
  </h1>
</div>
`;
